chore: add twitter card and open graph metadata

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,38 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-		<title><%= htmlWebpackPlugin.options.title %></title>
+		<title>My Birthday Countdown Timer</title>
+		<meta
+			name="description"
+			content="A challenge to build out this My Birthday Countdown Timer Page and get it looking as close to the design as possible."
+		/>
+		<meta property="og:site_name" content="My Birthday Countdown Timer" />
+		<meta
+			property="og:description"
+			content="A challenge to build out this My Birthday Countdown Timer and get it looking as close to the design as possible."
+		/>
+		<meta property="og:title" content="My Birthday Countdown Timer" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:url"
+			content="https://my-birthday-countdown-timer-angeleraser.vercel.app"
+		/>
+		<meta
+			property="og:image"
+			content="https://res.cloudinary.com/dixrgy8ki/image/upload/c_scale,h_630,w_1200/v1613948834/portfolio/projects/countdown-timer_bjmlgg.png"
+		/>
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@angeleraser" />
+		<meta name="twitter:title" content="My Birthday Countdown Timer" />
+		<meta
+			name="twitter:description"
+			content="A challenge to build out this My Birthday Countdown Timer and get it looking as close to the design as possible."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://res.cloudinary.com/dixrgy8ki/image/upload/c_scale,h_630,w_1200/v1613948834/portfolio/projects/countdown-timer_bjmlgg.png"
+		/>
+		<meta name="twitter:image:alt" content="My Birthday Countdown Timer" />
 	</head>
 	<body>
 		<noscript>
